--- a/templates/pacientes.html
+++ b/templates/pacientes.html
@@ -43,6 +43,7 @@
 
     jQuery(document).ready(function ($) {
         let pacientes = JSON.parse('%PACIENTES%');
+        console.log(pacientes);
         for (let paciente of pacientes) {
             let fila = '<tr>\
             <th scope="row">' + paciente.id + '</th>';
@@ -100,9 +101,10 @@
                     action: 'expedientes_reporte_pacientes',
                 },
                 success: function (response) {
+                    console.log(response)
                     getTemplate('/wp-content/plugins/expedientes-qi/templates/tabla_pacientes.html')
                         .then(function (template) {
-                            buildTemplate(template, ['paciente'], pacientes).then(
+                            buildTemplate(template, ['paciente'], response).then(
                                 (builded_template) => {
                                     createPDF(builded_template, 'pacientes', 'landscape');
                                 }
