--- a/templates/tabla_pacientes.html
+++ b/templates/tabla_pacientes.html
@@ -7,6 +7,7 @@
         <th>Teléfono</th>
         <th>Fecha de Creación</th>
         <th>Fecha de Modificación</th>
+        <th>Responsables</th>
     </thead>
     <tbody>
         <tr nth-for="paciente">
@@ -17,6 +18,7 @@
             <td>{{telefono}}</td>
             <td>{{fecha_creacion}}</td>
             <td>{{fecha_modificacion}}</td>
+            <td>{{responsables}}</td>
         </tr>
     </tbody>
 </table>
