--- a/templates/pacientes.html
+++ b/templates/pacientes.html
@@ -99,15 +99,8 @@
                 data: {
                     action: 'expedientes_reporte_pacientes',
                 },
-                success: function (response) {
-                    getTemplate('/wp-content/plugins/expedientes-qi/templates/tabla_pacientes.html')
-                        .then(function (template) {
-                            buildTemplate(template, ['paciente'], response).then(
-                                (builded_template) => {
-                                    createPDF(builded_template, 'pacientes', 'Pacientes', 'landscape', true);
-                                }
-                            )
-                        });
+                success: function (data) {
+                    createPacientesPDF(data);
                 }
             });
         });
